--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ build/
 out/
 cmake-build-*/
 .build/
+.xmake/
+bazel-bin
+bazel-out
+bazel-testlogs
+bazel-*
+MODULE.bazel
+MODULE.bazel.lock
 shmem.md
 mocking-support/
 
