--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,6 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("//build_defs:gentest.bzl", "gentest_suite")
 
+
 cc_binary(
     name = "gentest_codegen",
     srcs = [
@@ -36,17 +37,21 @@ cc_binary(
 gentest_suite(name = "gentest_unit_tests", suite = "unit")
 gentest_suite(name = "gentest_integration_tests", suite = "integration")
 gentest_suite(name = "gentest_fixtures_tests", suite = "fixtures")
+gentest_suite(name = "gentest_skiponly_tests", suite = "skiponly")
+# gentest_suite(name = "gentest_templates_tests", suite = "templates")
+# Optionally enable mocking once stable under sandbox
+# gentest_suite(name = "gentest_mocking_tests", suite = "mocking")
 
 sh_test(
     name = "codegen_check_valid",
     srcs = ["scripts/bazel_codegen_check.sh"],
     data = [":gentest_codegen", "tests/unit/cases.cpp"],
-    args = ["valid"],
+    args = ["$(location :gentest_codegen)", "valid"],
 )
 
 sh_test(
     name = "codegen_check_invalid",
     srcs = ["scripts/bazel_codegen_check.sh"],
     data = [":gentest_codegen", "tests/smoke/invalid_attrs.cpp"],
-    args = ["invalid"],
+    args = ["$(location :gentest_codegen)", "invalid"],
 )
