feat(bench): add attribute-driven benchmarks and jitter analysis\n\n- New attributes: bench("suite/name"), jitter("suite/name")\n- CLI: --list-benches/--run-bench/--bench-filter (+ tuning flags)\n- Jitter CLI: --list-jitters/--run-jitter/--jitter-filter, histogram with headers and ns/op units\n- Respect fixture lifetimes; exclude benches from normal test runs/lists\n- Generator/runtime: propagate is_benchmark/is_jitter; update case table and selection\n- Sample suite: tests/benchmarks with concat/sqrt and sin jitter\n- Docs: README and attributes guidance updated

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,8 @@ set(_gentest_test_suites
     skiponly
     fixtures
     templates
-    mocking)
+    mocking
+    benchmarks)
 
 # Optionally include libassert integration suite
 if(GENTEST_WITH_LIBASSERT)
