runtime: suite-centric shuffle; remove group and --shuffle-fixtures; treat fixture ctor exceptions as test failures; shared runtime option
- Shuffle
  - Replace --shuffle-fixtures with --shuffle (suite-centric shuffling).
  - Free + member-ephemeral tests shuffle together per suite.
  - Suite/global fixtures form contiguous groups; shuffle only within each group.

- Fixture policy and errors
  - Add opt-in strict generator check (GENTEST_STRICT_FIXTURE=1) to forbid member tests on suite/global fixtures with clear diagnostics.
  - Handle constructor exceptions across lifetimes:
    - Ephemeral/member and free-function fixtures: show "unexpected std::exception: <what>".
    - Suite/global fixtures: catch during acquisition and record synthetic failure "fixture construction threw std::exception: <what>".

- CLI/Docs
  - Remove group attribute usage and validation; prefer suite("...") for organization.
  - Update README: shuffling semantics, constructor exception reporting, linkage docs, benchmarking usage.
  - Update attributes header examples (remove group).

- Build/linkage
  - Add -DGENTEST_RUNTIME_SHARED=ON to build gentest_runtime as shared (PIC only in shared; Windows exports enabled). Default remains static.

- Tests
  - New ctor suite with four negative tests (ephemeral member, free fixtures, suite, global).
  - Add env-aware CheckDeathEnv.cmake for generator death tests.
  - Negative generator tests for strict fixture policy.
  - Update counts and list checks accordingly.

All tests pass: ctest --preset=debug-system (57/57).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,23 @@
 add_library(${PROJECT_NAME} INTERFACE)
 
-add_library(gentest_runtime STATIC
+# Linkage selection: default STATIC, optional SHARED
+option(GENTEST_RUNTIME_SHARED "Build gentest_runtime as a shared library" OFF)
+set(_gentest_runtime_libtype STATIC)
+if(GENTEST_RUNTIME_SHARED)
+    set(_gentest_runtime_libtype SHARED)
+endif()
+
+add_library(gentest_runtime ${_gentest_runtime_libtype}
     ${PROJECT_SOURCE_DIR}/src/runner_impl.cpp)
+
+if(GENTEST_RUNTIME_SHARED)
+    # Only set PIC for the shared case
+    set_target_properties(gentest_runtime PROPERTIES POSITION_INDEPENDENT_CODE ON)
+    # Make Windows shared builds work without explicit __declspec(dllexport)
+    if(WIN32)
+        set_target_properties(gentest_runtime PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    endif()
+endif()
 
 target_include_directories(gentest_runtime
     PUBLIC ${PROJECT_SOURCE_DIR}/include)
