--- a/.github/workflows/alt-builds.yml
+++ b/.github/workflows/alt-builds.yml
@@ -15,10 +15,10 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Python (for Meson)
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: '3.x'
 
@@ -42,13 +42,43 @@ jobs:
         run: |
           choco install -y cmake ninja meson xmake
 
-      - name: Setup Bazelisk
-        uses: bazelbuild/setup-bazelisk@v2
+      - name: Setup CMake
+        uses: actions/setup-cmake@v3
+        with:
+          cmake-version: '3.31.x'
 
-      - name: Build generator via CMake (for Meson/Xmake)
+      - name: Setup LLVM (20)
+        uses: llvm/actions/setup-llvm@v1
+        with:
+          version: '20'
+
+      - name: Setup Bazelisk
+        uses: bazelbuild/setup-bazelisk@v3
+
+      - name: Setup vcpkg (Windows only)
+        if: runner.os == 'Windows'
+        uses: microsoft/setup-vcpkg@v1
+        with:
+          vcpkgDirectory: '${{ runner.temp }}/vcpkg'
+          runVcpkgInstall: false
+          appendedCacheKey: windows-alt
+
+      - name: Build generator via CMake (for Meson/Xmake) [non-Windows]
+        if: runner.os != 'Windows'
         shell: bash
         run: |
-          cmake -G Ninja -S . -B build/codegen -DCMAKE_BUILD_TYPE=Release
+          cmake -G Ninja -S . -B build/codegen -DCMAKE_BUILD_TYPE=Release \
+            -DLLVM_DIR="$LLVM_PATH/lib/cmake/llvm" -DClang_DIR="$LLVM_PATH/lib/cmake/clang"
+          cmake --build build/codegen --target gentest_codegen -j 2
+
+      - name: Build generator via CMake (for Meson/Xmake) [Windows]
+        if: runner.os == 'Windows'
+        shell: bash
+        run: |
+          cmake -G Ninja -S . -B build/codegen -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_TOOLCHAIN_FILE="${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" \
+            -DVCPKG_FEATURE_FLAGS=manifests,versions \
+            -DLLVM_DIR="$LLVM_PATH/lib/cmake/llvm" -DClang_DIR="$LLVM_PATH/lib/cmake/clang"
           cmake --build build/codegen --target gentest_codegen -j 2
 
       - name: Meson configure (with codegen)
